--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -60,5 +60,9 @@
       <p>Download <a href=" {{ post.paperurl }} "><u>here</u></a></p>
     {% endif %}
 
+    {% if post.collection == 'publications' %}
+      <p> Slides: {{ post.slides}} </p>
+      <p> Video: {{ pos.video}} </p>
+
   </article>
 </div>
