--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -63,6 +63,7 @@
     {% if post.collection == 'publications' %}
       <p> Slides: {{ post.slides}} </p>
       <p> Video: {{ pos.video}} </p>
+    {% endif %}
 
   </article>
 </div>
