--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -62,7 +62,7 @@
 
     {% if post.collection == 'publications' %}
       <p> Slides: {{ post.slides}} </p>
-      <p> Video: {{ pos.video}} </p>
+      <p> Video: {{ post.video}} </p>
     {% endif %}
 
   </article>
