--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -63,7 +63,7 @@
     {% if post.collection == 'publications' %}
       <p> Slides <a href=" {{ post.slides }} "><u>here</u></a></p>
       <video width="320" height="240" controls>
-        <source src="post.video" type="video/mp4">
+        <source src="{{ post.video }}" type="video/mp4">
        Your browser does not support the video tag.
       </video>
     {% endif %}
