--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -68,7 +68,7 @@
       </video>
     {% elsif post.slides}
       <p> Slides <a href=" {{ post.slides }} "><u>here</u></a></p>
-    {% elseif post.video}
+    {% elsif post.video}
       <video width="320" height="240" controls>
         <source src="{{ post.video }}" type="video/mp4">
        Your browser does not support the video tag.
