--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -66,9 +66,9 @@
         <source src="{{ post.video }}" type="video/mp4">
        Your browser does not support the video tag.
       </video>
-    {% elsif post.slides}
+    {% elsif post.slides %}
       <p> Slides <a href=" {{ post.slides }} "><u>here</u></a></p>
-    {% elsif post.video}
+    {% elsif post.video %}
       <video width="320" height="240" controls>
         <source src="{{ post.video }}" type="video/mp4">
        Your browser does not support the video tag.
