--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -62,7 +62,7 @@
 
     
     {% if post.slides and post.poster%}
-      <p> <a href=" {{ post.slides }} "><u>[Slides]</u></a> <a href=" {{ post.posters }} "><u>[Poster]</u></a></p>
+      <p> <a href=" {{ post.slides }} "><u>[Slides]</u></a> <a href=" {{ post.poster }} "><u>[Poster]</u></a></p>
     {% elsif post.poster %}
       <p> <a href=" {{ post.poster }} "><u>[Poster]</u></a></p>
     {% elsif post.slides %}
