--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -60,7 +60,10 @@
       <p>Download <a href=" {{ post.paperurl }} "><u>here</u></a></p>
     {% endif %}
 
-    
+    {% if post.url %}
+       <p> <a href=" {{ post.url }} "><u>[Paper]</u></a></p>
+    {% endif %}
+
     {% if post.slides and post.poster%}
       <p> <a href=" {{ post.slides }} "><u>[Slides]</u></a> <a href=" {{ post.poster }} "><u>[Poster]</u></a></p>
     {% elsif post.poster %}
