--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -60,8 +60,8 @@
       <p>Download <a href=" {{ post.paperurl }} "><u>here</u></a></p>
     {% endif %}
 
-    {% if post.url %}
-       <p> <a href=" {{ post.url }} "><u>[Paper]</u></a></p>
+    {% if post.burl %}
+       <p> <a href=" {{ post.burl }} "><u>[Paper]</u></a></p>
     {% endif %}
 
     {% if post.slides and post.poster%}
