--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -60,6 +60,10 @@
       <p>Download <a href=" {{ post.paperurl }} "><u>here</u></a></p>
     {% endif %}
 
+    {% if post.authors %}
+      <p>Authors: {{ post.authors }} </p>
+    {% endif %}
+
     {% if post.burl %}
        <p> <a href=" {{ post.burl }} "><u>[Paper]</u></a></p>
     {% endif %}
